tests/ui/intrinsics/not-overridden.stderr
error: intrinsic const_deallocate (MustBeOverridden) got to the codegen backend, but wasn't overridden
  --> $DIR/not-overridden.rs:16:14
   |
LL |     unsafe { const_deallocate(std::ptr::null_mut(), 0, 0) }
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

query stack during panic:
end of query stack
error: aborting due to 1 previous error

